# Quantum-Error-Mitigation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.py
experiments/configs/: noise_learning.yaml  qaoa.yaml  vqe.yaml
experiments/scripts/: budget_sweep.py  build_arxiv.sh  complex_noise_experiment.py  evaluate_mitigation.py  feature_ablation.py  finetune_hardware.py  fold_breaking_prototype.py  full_experiment.py  hardware_run.py  high_noise_experiment.py  make_figures.py  make_hardware_figure.py  make_tables.py  model_size_ablation.py  nem_on_coherent_prototype.py  phase_boundary.py  plot_results.py  quick_experiment.py  reconstruct_oldhw.py  run_20q.sh  run_campaign.sh  safeguard_analysis.py  scaling_cell.py  sweep_finetune.py  train_error_predictor.py
paper/: cover_letter.tex  main.tex  references.bib
paper/figures/: architecture_diagram.tex  overview_diagram.tex
paper/tables/: budget_full.tex  safety_full.tex  scaling_full.tex
src/: __init__.py
src/classical/: __init__.py  baselines.py  mitiq_baselines.py
src/hybrid/: __init__.py  neural_mitigator.py
src/models/: __init__.py  direct_predictor.py  error_predictor.py  mitigation_net.py
src/quantum/: __init__.py  circuits.py  miscalibration.py  noise_models.py
src/training/: __init__.py  data_generator.py  (+1 more)
tests/: __init__.py  conftest.py  test_baselines.py  test_circuits.py  test_data_generator.py  test_direct_predictor.py  test_hybrid.py  test_metrics.py  test_miscalibration.py  test_mitiq_baselines.py  test_models.py  test_noise_models.py  test_sampled_estimation.py
(+37 files in other folders)
